<resources>
    <string name="app_name">Dataset Tool</string>
    <string name="camera_view_content_description">Image currently seen through camera</string>
    <string name="create_new_dataset">Create New Dataset</string>
    <string name="modify_existing_dataset">Modify Existing Dataset</string>
    <string name="next">Next</string>
    <string name="enter_dataset_name">Enter the name for the dataset:</string>
    <string name="name">Name</string>
    <string name="you_must_enter_name">You must enter a name!</string>
    <string name="will_be_saved_to">Will be saved to: %1$s</string>
    <string name="invalid_characters_used">Invalid characters used in name.</string>
    <string name="dataset_already_exists">A dataset already exists with this name.</string>
    <string name="err_unexpected_exception">An unexpected exception occurred:\n%1$s\nPlease check the log for more details.</string>
    <string name="err_files_exist">One or more of the files to be created already exist. Please try again with a different name.</string>
    <string name="refresh">Refresh</string>
    <string name="dataset_title_placeholder">dataset_default_title</string>
    <string name="add_entry">Add Entry</string>
    <string name="minus_one">-1</string>
    <string name="thumbnail_content_desc">Thumbnail of dataset entry image</string>
    <string name="image_content_desc">Dataset entry image</string>
    <string name="filename_display_placeholder">default.jpeg</string>
    <string name="size_display_placeholder">(1234x1234)</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="move_to_top">Move To Top</string>
    <string name="move_to_bottom">Move To Bottom</string>
    <string name="ymax_placeholder">ymax: 5678</string>
    <string name="ymin_placeholder">ymin: 1234</string>
    <string name="xmax_placeholder">xmax: 5678</string>
    <string name="xmin_placeholder">xmin: 1234</string>
    <string name="object_class_placeholder">ObjectClass at</string>
    <string name="object_class_at">%1$s at:</string>
    <string name="size_display_format">(%1$dx%2$d)</string>
    <string name="ymax_format">ymax: %1$d</string>
    <string name="ymin_format">ymin: %1$d</string>
    <string name="xmax_format">xmax: %1$d</string>
    <string name="xmin_format">xmin: %1$d</string>
    <string name="done">Done</string>
    <string name="delete_entry">Delete entry</string>
    <string name="delete_entry_title">Delete Entry?</string>
    <string name="warning_action_irreversible">This action is irreversible.</string>
    <string name="button_text_delete">Delete</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="image_file_not_deleted_properly">Image file could not be deleted properly. You may need to do it manually.</string>
    <string name="cached_image_not_deleted">Cached image created by camera was not deleted properly. You may have to do it manually.</string>
</resources>
