<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true">

    <TextView
        android:id="@+id/index_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/minus_one"
        android:textColor="#3d3d3d"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/thumbnail_content_desc"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/index_display" />

    <TextView
        android:id="@+id/filename_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/filename_display_placeholder"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/thumbnail"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/size_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/size_display_placeholder"
        app:layout_constraintEnd_toEndOf="@+id/thumbnail"
        app:layout_constraintStart_toStartOf="@+id/thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/thumbnail" />

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:background="#00ffffff"
        android:contentDescription="@string/delete_entry"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/size_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_delete" />

    <TextView
        android:id="@+id/class_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/object_class_placeholder"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/filename_display" />

    <TextView
        android:id="@+id/xmin_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/xmin_placeholder"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/class_display" />

    <TextView
        android:id="@+id/xmax_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/xmax_placeholder"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/xmin_display"
        app:layout_constraintStart_toEndOf="@+id/xmin_display"
        app:layout_constraintTop_toTopOf="@+id/xmin_display" />

    <TextView
        android:id="@+id/ymin_display"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/ymin_placeholder"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/xmin_display" />

    <TextView
        android:id="@+id/ymax_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/ymax_placeholder"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/xmax_display"
        app:layout_constraintStart_toEndOf="@+id/ymin_display"
        app:layout_constraintTop_toBottomOf="@+id/xmax_display" />
</androidx.constraintlayout.widget.ConstraintLayout>